# Zamhareer

./: .gitmodules  2  CMakeLists.txt  meson.build
.cache/clangd/index/: logger.cpp.B3FF04DBC61A2C0C.idx  logger.hpp.0342FA6E031084F7.idx  main.cpp.9BC525B4258B2C12.idx  test.hpp.D366CF74781A8042.idx  viewport.cpp.10FC40FA8F1430B1.idx  viewport.hpp.9FB07C4F67E3E053.idx  window.cpp.497942CCC6F77F9E.idx  window.hpp.4DAE7EDFCEDE8F91.idx  zm.cpp.21CBCB8A41D58B9D.idx  zm.hpp.13F2BA25E453C1E4.idx  zmprinter.hpp.4B0F234BA6FB7B30.idx
source/: CMakeLists.txt
source/Game/include/: TestLayer.h
source/Game/src/: main.cpp
source/Zamhareer/: CMakeLists.txt
source/Zamhareer/include/ZM/: Camera.h  Camera2D.h  Color.h  Engine.h  Image.h  KeyCode.h  Layer.h  Node.h  Orray.h  ViewPort.h  oaa_Array.h  oaa_String.h  oaa_Timer.h
source/Zamhareer/include/ZM/Event/: Event.h  KeyBoardEvent.h  MouseEvent.h  WindowEvent.h
source/Zamhareer/include/ZM/Renderer/: Opengl3_Renderer.h  Renderer.h
source/Zamhareer/include/ZM/Window/: Window.h  glfw_impl.h
source/Zamhareer/include/ZM/window_impl/: glfw_Window.h
source/Zamhareer/resources/shaders/default/: fragment.glsl  vertex.glsl
source/Zamhareer/src/: Camera.cpp  Camera2D.cpp  Color.cpp  Engine.cpp  Image.cpp  Layer.cpp  Node.cpp  oaa_String.cpp  oaa_Timer.cpp
source/Zamhareer/src/Renderer/: Opengl3_Renderer.cpp
source/Zamhareer/src/Window/: glfw_impl.cpp
source/Zamhareer/src/window_impl/: glfw_Window.cpp
source/include/: app.hpp
source/src/: main.cpp
src/: main.cpp
subprojects/Zamhareer/: meson.build  meson_options.txt
subprojects/Zamhareer/include/zm/: logger.hpp  zm.hpp
subprojects/Zamhareer/include/zm/viewport/: viewport.hpp  window.hpp
subprojects/Zamhareer/src/: logger.cpp  zm.cpp
subprojects/Zamhareer/src/viewport/: viewport.cpp  window.cpp
zamhareer/: CMakeLists.txt
zamhareer/include/: core.hpp  windowing.hpp
zamhareer/include/event/: event.hpp  key_event.hpp  keyboard_event.hpp  mouse_event.hpp  window_event.hpp
zamhareer/src/: core.cpp  windowing.cpp
